@startuml

title 현대모터, LG모터 클래스의 상위 클래스인 Motor 정의

abstract class Motor {
    - motorStatus : MotorStatus
    + Motor(door : Door)
    + getMotorStatus() : MotorStatus
    # setMotorStatus(motorStatus : MotorStatus) : void
}

class Door {
    - doorStatus : DoorStatus
    + Door()
    + getDoorStatus() : motorStatus
    + open() : void
    + close() : void
}

class HyundaiMotor {
    + HyundaiMotor(motor : Motor)
    + move(direction : Direction) : void
    - moveHyundaiMotor(direction : Direction) : void
}

class LGMotor {
    + LGMotor(motor : Motor)
    + move(direction : Direction) : void
    - moveLGMotor(direction : Direction) : void
}


Motor -> Door : door
Motor <|-- HyundaiMotor
Motor <|-- LGMotor

@enduml